# release-finder

./: README.md  pyproject.toml
release_finder/: __init__.py  github.py  release.py
tests/: test_release.py
