[tool.poetry]
name = "release-finder"
version = "0.1.0"
description = "Python package that helps you find the latest releases information for a given GitHub repository."
authors = ["Rahul Sharma <rahulxsh@gmail.com>"]
maintainers = ["Rahul Sharma <rahulxsh@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "release_finder"}]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
homepage = "https://github.com/rahulXs/release-finder"
repository = "https://github.com/rahulXs/release-finder"
keywords = ["release-finder", "release", "finder", "version", "tag", "rahulXs"]

[tool.poetry.dependencies]
requests = "^2.13.0"
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
